Bug 509949 - (wayland) Unable to move windows with Super + LMB with a pen tablet
Summary: (wayland) Unable to move windows with Super + LMB with a pen tablet
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 6.4.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-25 20:05 UTC by Julien Kaspar
Modified: 2025-12-10 19:56 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Kaspar 2025-09-25 20:05:55 UTC
SUMMARY

I'm unable to move windows with Super + LMB with a pen tablet. 

I couldn't find an existing report for this, but a similar bug with resizing via Super + RMB was recently fixed. So maybe this is being worked on? 

STEPS TO REPRODUCE
1. Plug in any pen tablet
2. Hold the Super key
3. Try to move a window by left click dragging it around

OBSERVED RESULT
The window does not respond.

EXPECTED RESULT
The window should move with the cursor until lifting the pen.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.2
Kernel Version: 6.16.7-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon  780M Graphics
Memory: 32 GiB of RAM (30.6 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics
Manufacturer: Framework
Product Name: Laptop 13 (AMD Ryzen 7040Series)
System Version: A7

ADDITIONAL INFORMATION
Comment 1 Marco Martin 2025-09-26 14:30:34 UTC
can confirm
Comment 2 Sebastian Parborg 2025-12-05 10:15:15 UTC
@Joshua Goins as you guys seem to be on a tablet bug fixing spree, I just wanted to poke you about this one.

This is one of the things that would make using a tablet much nicer in KDE Wayland if fixed as it removes the need to do any "corner hot zone hunting" with the pen.
Comment 3 Bug Janitor Service 2025-12-10 11:32:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8544
Comment 4 Vlad Zahorodnii 2025-12-10 18:35:32 UTC
Git commit 8bb13ccc60143acd932b2b4057ce8a2d6603261f by Vlad Zahorodnii.
Committed on 10/12/2025 at 18:12.
Pushed by vladz into branch 'master'.

Make global window actions work with tablet input

M  +21   -4    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/8bb13ccc60143acd932b2b4057ce8a2d6603261f