Make global window actions work with tablet input

BUG: 509949